Fixed header presentation on mobile

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,6 +1,6 @@
 .hero-title {
   padding-top: 1rem;
-  font-weight: 900;
+  font-weight: 700;
   letter-spacing: -15px;
   font-size: 12vw;
   padding: 2rem;
